<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/verde_claro"
        android:orientation="vertical">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/cifrao2" />

        <TextView
            style="@style/estilo_textview"
            android:gravity="center"
            android:text="@string/salario_bruto" />


        <EditText
            android:id="@+id/edit_sb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Digite o Salário Bruto"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/estilo_textview"
            android:gravity="center"
            android:text="@string/numero_dependentes" />

        <EditText
            android:id="@+id/edit_numeroDependente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Digite o número de dependentes"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/estilo_textview"
            android:gravity="center"
            android:text="@string/tipo_plano" />

        <Spinner
            android:id="@+id/planoSaude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            style="@style/estilo_textview"
            android:gravity="center"
            android:text="@string/vale_transporte" />


        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/simVT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sim" />

            <RadioButton
                android:id="@+id/naoVT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/nao" />
        </RadioGroup>

        <TextView
            style="@style/estilo_textview"
            android:gravity="center"
            android:text="@string/vale_alimentacao" />


        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/simVA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sim" />

            <RadioButton
                android:id="@+id/naoVA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/nao" />
        </RadioGroup>

        <TextView
            style="@style/estilo_textview"
            android:gravity="center"
            android:text="@string/vale_refeicao" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/simVR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sim" />

            <RadioButton
                android:id="@+id/naoVR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/nao" />

        </RadioGroup>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_calcular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/calcular" />

            <Button
                android:id="@+id/bt_limpar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/limpar" />

        </LinearLayout>

        <TextView
            android:id="@+id/desconto_plano_saude"
            style="@style/estilo_textview_resultado" />

        <TextView
            android:id="@+id/desconto_inss"
            style="@style/estilo_textview_resultado" />

        <TextView
            android:id="@+id/desconto_VT"
            style="@style/estilo_textview_resultado" />

        <TextView
            android:id="@+id/desconto_VA"
            style="@style/estilo_textview_resultado" />

        <TextView
            android:id="@+id/desconto_VR"
            style="@style/estilo_textview_resultado" />

        <TextView
            android:id="@+id/desconto_irrf"
            style="@style/estilo_textview_resultado" />

        <TextView
            android:id="@+id/salario_liquido"
            style="@style/estilo_textview_resultado" />

    </LinearLayout>

</ScrollView>
